k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hsa-app
  labels:
    kubernetes.io/metadata.name: hsa-app
